deploy/openshift/overlays/osaipo-eng-preprod/api-route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: osaipo-pulse-api
  labels:
    shard: internal
    paas.redhat.com/appcode: OSPO-004
  annotations:
    haproxy.router.openshift.io/timeout: 120s
spec:
  host: api-osaipo-pulse.apps.int.spoke.preprod.us-east-1.aws.paas.redhat.com
